# aiogram-s3

./: .gitignore  .mypy.ini  .ruff.toml  LICENSE  README.md  pyproject.toml
examples/: basic.py  example.env  send_s3_doc.py
examples/integrations/: dishka_.py
src/aiogram_s3/: __init__.py  config.py  input_file.py  session.py
src/aiogram_s3/integrations/: dishka.py
src/aiogram_s3/types/: __init__.py  config.py
