[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 61.0"]

[project]
name = "aiogram-s3"
description = "A lightweight library for seamless integration of Amazon S3 with aiogram. Simplify file uploads and downloads directly within your Telegram bots."
keywords = ["aiogram", "s3", "telegram", "bot"]

readme = "README.md"
license = {file = "LICENSE"}

version = "0.2.0"

requires-python = "~=3.12"
dependencies = [
    "aiogram",
    "aioboto3",
]

authors = [
    {name = "Ilya Nikolaev", email = "ilyanikolaev28@inbox.ru"}
]

[project.optional-dependencies]
dev = [
    "ruff~=0.8.4",
    "mypy~=1.14.1",
    "pre-commit~=4.0.1",
    "types-aioboto3~=13.3.0",
    "types-aiobotocore-s3~=2.16.1.post1",
]
types = [
    "types-aioboto3~=13.3.0",
    "types-aiobotocore-s3~=2.16.1.post1",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.ruff]
exclude = [
    ".venv",
    ".vscode",
    ".idea",
]

line-length = 79
indent-width = 4

target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
strict = true
warn_unreachable = true
show_column_numbers = true
show_error_context = true
check_untyped_defs = true
ignore_missing_imports = false
files = ["src/**/*.py", "examples/**/*.py"]
