[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 61.0"]

[project]
name = "aiogram-s3"
description = "A lightweight library for seamless integration of Amazon S3 with aiogram. Simplify file uploads and downloads directly within your Telegram bots."
keywords = ["aiogram", "s3", "telegram", "bot"]

readme = "README.md"
license = {file = "LICENSE"}

version = "0.3.0"

requires-python = ">=3.10"

dependencies = [
    "aiogram",
    "aioboto3",
    "types-aioboto3~=13.4.0",
    "types-aiobotocore-s3~=2.16.1.post1",
]

authors = [
    {name = "Ilya Nikolaev", email = "ilyanikolaev28@inbox.ru"}
]

[project.optional-dependencies]
dev = [
    "ruff~=0.8.4",
    "mypy~=1.14.1",
    "pre-commit~=4.0.1",
    
]
di = [
    "dishka"
]

[tool.setuptools]
package-dir = { "" = "src" }
